Add new methods task
